--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
 
             <div class="domain-card gpu-accelerated">
-                <a href="#" class="domain-link"><i class="fas fa-external-link-alt"></i></a>
+                <a href="content-creation.html" class="domain-link"><i class="fas fa-external-link-alt"></i></a>
                 <div class="domain-header">
                     <div class="domain-icon">
                         <i class="fas fa-video"></i>
